tests/lean/red.lean.expected.out
red.lean:10:19: error: type mismatch, expression
  rfl
has type
  ?m_2 = ?m_2
but is expected to have type
  f = g
red.lean:13:0: error: "eliminator" elaborator type mismatch, term
  rfl
has type
  ?m_2 = ?m_2
but is expected to have type
  f a = a
red.lean:18:0: error: "eliminator" elaborator type mismatch, term
  rfl
has type
  ?m_2 = ?m_2
but is expected to have type
  f a = a
